# src/app/api/models.ts
@@ -7,9 +7,11 @@ export { RegisterRequest } from './models/register-request';
 export { AuthenticationResponse } from './models/authentication-response';
 export { AuthenticationRequest } from './models/authentication-request';
 export { Statistique } from './models/statistique';
-export { PageProduitDto } from './models/page-produit-dto';
+export { PageRecapClient } from './models/page-recap-client';
 export { PageableObject } from './models/pageable-object';
+export { RecapClient } from './models/recap-client';
 export { SortObject } from './models/sort-object';
+export { PageProduitDto } from './models/page-produit-dto';
 export { PageFactureDto } from './models/page-facture-dto';
 export { PageClientDto } from './models/page-client-dto';
 export { PageCategorieDto } from './models/page-categorie-dto';
