# src/app/api/models/recap-client.ts
@@ -1,0 +1,11 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface RecapClient {
+  idClient?: number;
+  nmontantNonPaye?: number;
+  nmontantPaye?: number;
+  nomClient?: string;
+  nomCommercial?: string;
+  numFacture?: number;
+  prenomClient?: string;
+}
